--- a/LanguageSnippets.Web/Views/Snippet/Edit.cshtml
+++ b/LanguageSnippets.Web/Views/Snippet/Edit.cshtml
@@ -15,7 +15,7 @@
         <h4>SnippetEdit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.SnippetId)
+        @Html.HiddenFor(e => e.SnippetId)
 
         
         <div class="form-group">
@@ -53,3 +53,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
