--- a/LanguageSnippets.Web/Views/Snippet/Index.cshtml
+++ b/LanguageSnippets.Web/Views/Snippet/Index.cshtml
@@ -75,19 +75,20 @@
                 .css({ "cursor": "pointer" })
                 .click(function (e) {
                     var target = $(e.target);
-                    var noteId = target.attr("data-id");
+                    var snippetId = target.attr("data-id");
                     var starSet = target.hasClass("glyphicon-star");
 
                     $.ajax({
                         method: starSet ? "DELETE" : "PUT",
-                        url: "/api/note/" + noteId + "/star",
+                        url: "/api/snippets/" + nippetId + "/star",
                         data: null
                     })
                     .done(function (r) {
                         target.removeClass();
                         target.addClass("glyphicon " + (starSet ? "glyphicon-star-empty" : "glyphicon-star"));
                     })
-                    .fail(function (r) {
+                        .fail(function (r) {
+                            console.log(r);
                         alert("Failed to change star status");
                     });
                 });
