Changing the context for presentation

--- a/LanguageSnippets.Web/Views/Home/Index.cshtml
+++ b/LanguageSnippets.Web/Views/Home/Index.cshtml
@@ -3,8 +3,11 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1></h1>
+    <p class="lead">
+        This web application allows you to keep track of useful phrases that you have learned in any language! That includes interesting phrases in English,
+        or completely foreign languages like Mandarin Chinese. Developments will be made in the near future where you can review what you have learned.
+    </p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
@@ -12,11 +15,9 @@
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Feel free to register and start creating your own snippets to help you learn any language you would like!
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more "-Change-" &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
