Tons of clean up with remove un-needed files and functions. Lastly added a bootstrap template

--- a/LanguageSnippets.Web/Views/Home/Index.cshtml
+++ b/LanguageSnippets.Web/Views/Home/Index.cshtml
@@ -2,13 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1></h1>
+<div class="jumbotron" style="
+    background-image:url(http://www.bluemaize.net/im/arts-crafts-sewing/old-paper-5.jpg);
+    background-repeat: no-repeat;">
+    <h1>Language Snippet</h1>
     <p class="lead">
         This web application allows you to keep track of useful phrases that you have learned in any language! That includes interesting phrases in English,
         or completely foreign languages like Mandarin Chinese. Developments will be made in the near future where you can review what you have learned.
     </p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="https://asp.net" class="btn btn-default btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
@@ -21,12 +23,12 @@
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p>Have spare time? Go ahead and make your library bigger with the worlds most powerful translator! It is always advised to check with a friend to proofread.</p>
+        <p><a class="btn btn-default" href="https://translate.google.com/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Interactive Learning</h2>
+        <p>Looking for something more interactive in pair with Language Snippets? Go full steam ahead and kick off your language learning!</p>
+        <p><a class="btn btn-default" href="https://www.duolingo.com/">Learn more &raquo;</a></p>
     </div>
 </div>
