--- a/LanguageSnippets.Web/Views/Shared/DisplayTemplates/Starred.cshtml
+++ b/LanguageSnippets.Web/Views/Shared/DisplayTemplates/Starred.cshtml
@@ -3,6 +3,7 @@
 <span>
     <i class="glyphicon @(Model ? "glyphicon-star" : "glyphicon-star-empty")"
        data-toggle="star"
-       data-id="@ViewBag.Id"></i>
+       data-id="@ViewBag.Id"
+       style="color: lawngreen;"></i>
 </span>
 
