--- a/LanguageSnippets.Web/Views/Home/Index.cshtml
+++ b/LanguageSnippets.Web/Views/Home/Index.cshtml
@@ -6,10 +6,12 @@
     background-image:url(http://www.bluemaize.net/im/arts-crafts-sewing/old-paper-5.jpg);
     background-repeat: no-repeat;">
     <h1>Language Snippet</h1>
-    <p class="lead">
-        This web application allows you to keep track of useful phrases that you have learned in any language! That includes interesting phrases in English,
-        or completely foreign languages like Mandarin Chinese. Developments will be made in the near future where you can review what you have learned.
-    </p>
+    <div class="panel panel-default">
+        <p>
+            This web application allows you to keep track of useful phrases that you have learned in any language! That includes interesting phrases in English,
+            or completely foreign languages like Mandarin Chinese.
+        </p>
+    </div>
     <p><a href="https://asp.net" class="btn btn-default btn-lg">Learn more &raquo;</a></p>
 </div>
 
@@ -17,18 +19,18 @@
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            Feel free to register and start creating your own snippets to help you learn any language you would like!
+            Have spare time? Make your library bigger with the worlds most powerful translator! Always check with a friend to proofread.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more "-Change-" &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>Have spare time? Go ahead and make your library bigger with the worlds most powerful translator! It is always advised to check with a friend to proofread.</p>
         <p><a class="btn btn-default" href="https://translate.google.com/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Interactive Learning</h2>
         <p>Looking for something more interactive in pair with Language Snippets? Go full steam ahead and kick off your language learning!</p>
         <p><a class="btn btn-default" href="https://www.duolingo.com/">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>My Work</h2>
+        <p>Like what you see!? Check out my Portofolio to see if anything else catches your ere.</p>
+        <p><a class="btn btn-default" href="https://jolohman.github.io/Portfolio/">Learn more &raquo;</a></p>
     </div>
 </div>
